tests/baselines/reference/tsxDefaultAttributesResolution3.errors.txt
tests/cases/conformance/jsx/file.tsx(13,19): error TS2322: Type 'true' is not assignable to type 'false'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    interface Prop {
        x: false;
    }
    class Poisoned extends React.Component<Prop, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    // Error
    let p = <Poisoned x/>;
                      ~
!!! error TS2322: Type 'true' is not assignable to type 'false'.